--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -1364,12 +1364,13 @@ Types that differ only in their component information are considered to be equal
 We can create Feather expressions to execute the \( \times \)-\rform, \( \times \)-\rintro, and \( \times \)-\relim{} rules.
 The syntax \( A:\UU \)\lstinline! Component! should be interpreted to mean a component whose contained type is \( A \), and which may have extra component information.
 The prefix \lstinline{r} refers to the recursor \( \mathsf{rec} \), and the prefix \lstinline{e} refers to the elimination rule \( \mathsf{ind} \).
+% TODO: Update this
 \begin{lstlisting}[mathescape=true]
 (fprod $A_1:\UU$ Component $\dots$ $A_n:\UU$ Component)$ \;\longleftrightarrow\; \bigtimes_{j=1}^n A_j: \UU $
 (iprod $e_1:A_1$ Expr $\dots$ $e_n:A_n$ Expr)$ \;\longleftrightarrow\; (e_1,\dots, e_n): \bigtimes_{j=1}^n A_j $
-(rprod $g : A_1 \to \dots \to A_n \to C$ Expr $p:\bigtimes_{j=1}^n A_j$ Expr)
+(rprod $n$ $g : A_1 \to \dots \to A_n \to C$ Expr $p:\bigtimes_{j=1}^n A_j$ Expr)
     $\longleftrightarrow\; \rec{\bigtimes_{j=1}^n A_j}(C,g,p): C $
-(eprod $C : \bigtimes_{j=1}^n A_j \to \UU$ Expr $g : A_1 \to \dots \to A_n \to C$ Expr $p:\bigtimes_{j=1}^n A_j$ Expr)
+(eprod $n$ $C : \bigtimes_{j=1}^n A_j \to \UU$ Expr $g : A_1 \to \dots \to A_n \to C$ Expr $p:\bigtimes_{j=1}^n A_j$ Expr)
     $\longleftrightarrow\; \ind{\bigtimes_{j=1}^n A_j}(C,g,p): C $
 \end{lstlisting}
 Note that the recursor and induction function are used atomically here, not as functions.
@@ -1394,6 +1395,7 @@ Finally, we define
   $p:\bigplus_{j=1}^n A_j$ Expr)
     $\longleftrightarrow\; \ind{\bigplus_{j=1}^n A_j}(C,g,p): C $
 \end{lstlisting}
+No \( n \) is required in \lstinline{rcoprod} and \lstinline{ecoprod}, since the number of variants is implicit from the arity of the S-expression itself.
 Similarly to with the dependent pair type, the type annotation for \lstinline{icoprod} is used to determine the possible variants for the coproduct.
 Note that we can create recursive definitions here by, for example, encasing an \lstinline{fcoprod} inside a function, and then using an \lstinline{inst} to instance that name inside its own definition.
 This is the same procedure as is used in making recursive function definitions.
